# ALGOR-TP1

./: 1.txt  CMakeLists.txt  CMakePresets.json  StickSort.cpp  matchstick.cpp  matchstick.h  mian.cpp  sort.cpp  utils.cpp
src/: README.md  display.cpp  display.h  matchstick.cpp  matchstick.h  mian.cpp  sort.h  utils.cpp  utils.h
